--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href ="style.css" rel="stylesheet" >
     
-    <title>Document</title>
+    <title>OwlQuery</title>
 </head>
 
 <body>
@@ -49,7 +49,7 @@
       </nav>
 
 
-      
+
       <script src="script.js"></script>
 </body>
 </html>
