--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link href="style.css" rel="stylesheet" />
 
-    <title>Document</title>
+    <title>Princess</title>
   </head>
 
   <body>
