--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 
-    <title>Christian</title>
+    <title>OwlQuery</title>
 
 
 
@@ -79,8 +79,9 @@
       </div>
     </nav>
 
+    <div class="container">
     <div class="card" style="width: 18rem">
-      <img src="..." class="card-img-top" alt="..." />
+      <img src="images/id_default.png" class="card-img-top" alt="..." />
       <div class="card-body">
         <h5 class="card-title">Jhon Carl Ormita</h5>
         <p class="card-text">
@@ -92,7 +93,7 @@
     </div>
 
     <div class="card" style="width: 18rem">
-      <img src="..." class="card-img-top" alt="..." />
+      <img src="images/id_default.png" class="card-img-top" alt="..." />
       <div class="card-body">
         <h5 class="card-title">Tyron Bechayda</h5>
         <p class="card-text">
@@ -104,7 +105,7 @@
     </div>
 
     <div class="card" style="width: 18rem">
-      <img src="..." class="card-img-top" alt="..." />
+      <img src="images/id_default.png" class="card-img-top" alt="..." />
       <div class="card-body">
         <h5 class="card-title">Christian Gomelan</h5>
         <p class="card-text">
@@ -116,7 +117,7 @@
     </div>
 
     <div class="card" style="width: 18rem">
-      <img src="..." class="card-img-top" alt="..." />
+      <img src="images/id_default.png" class="card-img-top" alt="..." />
       <div class="card-body">
         <h5 class="card-title">Princess Ryan Ramos</h5>
         <p class="card-text">
@@ -126,7 +127,7 @@
         <a href="#" class="btn btn-primary">OwlQuery</a>
       </div>
     </div>
-
+  </div>
 
     <script src="script.js"></script>
   </body>
