Edit User Details

--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
       <div class="card-body">
         <h5 class="card-title">Jhon Carl Ormita</h5>
         <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
+          Handled Main Branch Sprint 1
         </p>
         <a href="#" class="btn btn-primary">OwlQuery</a>
       </div>
@@ -91,8 +90,7 @@
       <div class="card-body">
         <h5 class="card-title">Tyron Bechayda</h5>
         <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
+          Handled Person 3 - JavaScript
         </p>
         <a href="#" class="btn btn-primary">OwlQuery</a>
       </div>
@@ -103,8 +101,7 @@
       <div class="card-body">
         <h5 class="card-title">Christian Gomelan</h5>
         <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
+          Handled Person 2 - CSS UI
         </p>
         <a href="#" class="btn btn-primary">OwlQuery</a>
       </div>
@@ -115,8 +112,7 @@
       <div class="card-body">
         <h5 class="card-title">Princess Ryan Ramos</h5>
         <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
+          Handled Person 1 - HTML Cards and User Details
         </p>
         <a href="#" class="btn btn-primary">OwlQuery</a>
       </div>
